Increasing memory to surefire plugin